plugins {
    id 'net.fabricmc.fabric-loom' version '1.16.1' // 建议用稳定版的 1.16.1
    id 'maven-publish'
}

version = "1.0.0"
group = "me.ziyun.ctnhchangelog"

base {
    archivesName = "ctnhchangelog"
}

// 所有的仓库定义必须在这里面
repositories {
    maven { url "https://maven.fabricmc.net/" }
    maven { url "https://maven.shedaniel.me/" } // Cloth Config 仓库
    maven { url "https://maven.terraformersmc.com/releases/" } // Mod Menu 仓库
    mavenCentral()
}

dependencies {
    // 基础环境 (26.1开始去除了所有 mappings 配置)
    minecraft "com.mojang:minecraft:26.1"
    implementation "net.fabricmc:fabric-loader:0.19.2"
    implementation "net.fabricmc.fabric-api:fabric-api:0.145.1+26.1"

    // 配置界面 (Cloth Config) - 去除了 mod 前缀
    implementation("me.shedaniel.cloth:cloth-config-fabric:26.1.154") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    // 模组菜单 (Mod Menu) - 去除了 mod 前缀
    implementation "com.terraformersmc:modmenu:18.0.0-alpha.8"
}

processResources {
    inputs.property "version", project.version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.encoding = "UTF-8"
}